# lmdeploy-serving

./: .gitignore  README.md  SERVER.md  SERVE_OPTIMIZE_PROMPT.md  SERVE_OPTIMIZE_SUMMARY.md  image_captioninig.ipynb  internvl3_chat_template.json  pyproject.toml  qwen3_chat_template.json  start_proxy.sh  start_server-internvl3.sh  start_server-internvl3_14b.sh  start_server-internvl3_8b.sh  start_server-internvl3_8b_fintuned.sh  start_server-qwen3.sh  start_server-qwen3_14b.sh  start_server-qwen3_30b_a3b.sh  start_server-qwen3_32b.sh  test.ipynb
docs/: CLI_EXPLAIN.md  QUANTIZATION.md  SERVER.md  SERVE_OPTIMIZE.md
